# agent-boilerplate-py

./: .editorconfig  .env.sampple  .gitignore  Makefile  README.md  pyproject.toml
.run/: compile.run.xml  format.run.xml  lint.run.xml  run.run.xml  test.run.xml
src/agent_boilerplate/: main.py
src/agent_boilerplate/features/calculator/: __init__.py  agent.py  calculator.py  graphs.py  prompts.py  tools.py
src/agent_boilerplate/features/chatbot/: __init__.py  chatbot.py  prompts.py
src/agent_boilerplate/features/structured_output/: __init__.py  structured_output.py
src/agent_boilerplate/shared/: config.py  llms.py
src/agent_boilerplate/utils/: time_util.py
src/agent_core/: agnets.py  config.py  llms.py  main.py  models.py  state.py  test_calculator.py  test_chatbot.py  test_structured_output.py  tools.py
src/agent_core/calculator/: __init__.py  agents.py  graphs.py  test_calculator.py
src/agent_core/chatbot/: __init__.py  test_chatbot.py
src/agent_core/structured/: __init__.py  models.py  test_structured_output.py
