[project]
name = "agent-core"
version = "0.1.0"
description = "My awesome agent project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

# --- Build system config ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

# --- Ruff config ---
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"] # Enable Error, Warning, Pyflakes, and import sorting
ignore = []

[tool.ruff.format]
quote-style = "double"

# --- Mypy config ---
[tool.mypy]
python_version = "3.14"
mypy_path = "src"
files = ["src", "tests"]
strict = true
# Important: ignore errors from third-party libraries that lack type hints
ignore_missing_imports = true
# Allow functions to have return type Any (more permissive for dynamic features)
disallow_any_generics = false

# Plugin configuration for Pydantic (very important!)
# Pydantic generates a lot of dynamic code that mypy can't understand; the plugin helps
plugins = ["pydantic.mypy"]
